--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
+    "react-interval": "^2.1.1",
     "react-scripts": "4.0.2",
+    "react-simple-tree-menu": "^1.1.18",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
